# Physics-Simulation-HW1

./: README.md  autojudge.py  cartpole_gt_q.npy  cartpole_simulation.py  cartpole_visualization.py  gyroscope_gt_q.npy  gyroscope_simulation.py  gyroscope_visualization.py  pyproject.toml  robot_arm.py  setup.py
articulation_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cpp/: CMakeLists.txt  main.cpp
cpp/include/: ball_joint.hpp  common.hpp  hinge_joint.hpp  joint.hpp  planar_joint.hpp  prismatic_joint.hpp  rigid_transform.hpp  simulator.hpp  translational_joint.hpp  universal_joint.hpp
cpp/src/: ball_joint.cpp  common.cpp  hinge_joint.cpp  joint.cpp  planar_joint.cpp  prismatic_joint.cpp  rigid_transform.cpp  simulator.cpp  translational_joint.cpp  universal_joint.cpp
